<resources>
    <string name="app_name">小区天眼</string>
    <string name="push_info">Push Info</string>

    <string name="scene_activity">场景模式</string>
    <string name="title_activity_add_surface">新增监控点</string>
    <string name="title_activity_sub_scene">子场景</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">飞机型号: 未检测到飞机</string>
    <string name="connection_loose">状态: 无连接</string>
    <string name="sdk_version">DJI SDK Version: 4.3.2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_ui">UIActivity</string>
    <string name="title_activity_way_point">WayPointActivity</string>

    <string name="add">添加</string>

    <string name="query">查询</string>

    <string name="click">请点右上角，然后点击ListView</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="title_activity_sub_place">SubPlaceActivity</string>
    <string name="title_activity_memory_model">memoryModelActivity</string>

    <string name="way_point_config">航点任务配置</string>
    <string name="Altitude">高度：</string>
    <string name="speed">速度：</string>
    <string name="low">低</string>
    <string name="mid">中</string>
    <string name="high">高</string>
    <string name="Action_After_Finished">任务结束动作:</string>
    <string name="None">无</string>
    <string name="GoHome">返航</string>
    <string name="AutoLand">自动降落</string>
    <string name="BackTo_1st">返回第一点</string>
    <string name="Heading">飞机朝向:</string>
    <string name="Auto">自动</string>
    <string name="Initial">初始值</string>
    <string name="RC_Control">遥控控制</string>
    <string name="Use_Waypoint">航点方向</string>
    <string name="title_activity_media_manage">MediaManageActivity</string>



</resources>
