<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".MemoryModelActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/way_point_config"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">
    </TextView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/speed">
        </TextView>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/speedRG"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:id="@+id/lowSpeedSelec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"/>
            <RadioButton
                android:id="@+id/midSpeedSelec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mid"/>
            <RadioButton
                android:id="@+id/highSpeedSelec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Action_After_Finished"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/actionFinished"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:id="@+id/finishNoneSelec"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="6.5pt"
                android:text="@string/None"/>
            <RadioButton
                android:id="@+id/finishGoHomeSelec"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="6.5pt"
                android:text="@string/GoHome"/>
            <RadioButton
                android:id="@+id/finishAutoLandingSelec"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="6.5pt"
                android:text="@string/AutoLand"/>
            <RadioButton
                android:id="@+id/finishToFirstSelec"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textSize="6.5pt"
                android:text="@string/BackTo_1st"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Heading"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/headingNextSelec"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/Auto"
                android:textSize="6.5pt" />

            <RadioButton
                android:id="@+id/headingInitDirecSelec"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="初始值"
                android:textSize="6.5pt" />

            <RadioButton
                android:id="@+id/headingRCSelec"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/RC_Control"
                android:textSize="6.5pt" />

            <RadioButton
                android:id="@+id/headingWPSelec"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/Use_Waypoint"
                android:textSize="6.5pt" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
